@@ -816,6 +816,7 @@ mam-hard-drive=__ITEM__hard-drive__
 [item-description]
 ; additional vanilla descriptions
 copper-cable=Can also be used to manually connect and disconnect power poles with __CONTROL__build__.
+rail=Use to build straight rails manually or through the rail planner.\nThe rail planner can build short paths directly using __ALT_CONTROL__1__build__, or place long ghost paths using __ALT_CONTROL__1__build-ghost__.\n[font=default-semibold][color=#ffe6c0]Material cost is only paid for 1 in 6 placed rails.[/color][/font]
 ; slugs
 green-power-slug=Can be placed to decorate and provide bioluminescent light to your factory.
 yellow-power-slug=Can be placed to decorate and provide bioluminescent light to your factory.
