@@ -6,7 +6,7 @@ car.consumption = "90MW"
 car.weight = 90000
 car.friction = 0.01
 car.braking_power = "40MW"
-car.energy_per_hit_point = 150
+car.energy_per_hit_point = 450
 car.max_health = 100
 car.burner.fuel_category = nil
 car.burner.fuel_categories = {"chemical","carbon","packaged-fuel","packaged-alt-fuel","battery","nuclear"}
